--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -12,3 +12,16 @@
 @using Microsoft.AspNetCore.Mvc
 @using Dotnet9.Contracts.Dto.Tools
 @using Dotnet9.WebShare.Services
+@using Dotnet9.Contracts.Dto.Blogs
+@using Dotnet9.Contracts.Dto.Categories
+@using Dotnet9.Caller.Services.Categories
+@using Dotnet9.Contracts.Dto.FriendlyLinks
+@using System.Runtime.InteropServices
+@using System.Reflection
+@using Dotnet9.Caller.Services.Links
+@using Microsoft.AspNetCore.Components.Web
+@using Dotnet9.Contracts.Dto.Blogs
+@using Microsoft.AspNetCore.Components.Web
+@using System.Net
+@using Dotnet9.Contracts.Dto.Albums
+@using Dotnet9.Caller.Services.Albums
