--- a/src/Dotnet9.RazorPages/Pages/_Imports.razor
+++ b/src/Dotnet9.RazorPages/Pages/_Imports.razor
@@ -4,3 +4,6 @@
 @using Masa.Blazor
 @using Masa.Blazor.Presets
 @using Dotnet9.WebShare.Services
+@using Dotnet9.Contracts.Dto.Categories
+@using Dotnet9.Contracts.Dto.FriendlyLinks
+@using Dotnet9.Caller.Services.Links
