--- a/src/Dotnet9.BlazorWeb/Pages/ThirdTools/AI.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/ThirdTools/AI.razor
@@ -1,28 +1,7 @@
 ﻿@page "/ai"
-@layout ThirdLayout
+@layout EmptyLayout
 
 @inject ISystemClientService SystemClientService
-
-@section Headers
-{
-    <style>
-        * {
-            margin: 0;
-            padding: 0
-        }
-
-        body {
-            overflow: hidden;
-        }
-
-        iframe{
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            }
-
-    </style>
-}
 
 <PageTitle>Token AI</PageTitle>
 
