--- a/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
@@ -1,41 +1,71 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using Dotnet9.Contracts.Dto.Blogs
+@using Microsoft.AspNetCore.Components.Web
 @namespace Dotnet9.BlazorWeb.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@inject ISystemClientService SystemClientService
+
+@{
+    var siteInfo = await SystemClientService.GetSiteInfoAsync();
+}
 
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="~/" />
-    <link href="css/app.css" rel="stylesheet" />
-    <link href="Dotnet9.BlazorWeb.styles.css" rel="stylesheet" />
+    <meta charset="utf-8"/>
+    <meta name="keywords" content="@siteInfo?.Keywords" />
+    <meta name="description" content="@siteInfo?.Description" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="/css/base.css" rel="stylesheet">
+    <link href="/css/m.css" rel="stylesheet">
+    <link href="/css/swiper.min.css" rel="stylesheet">
+    <script src="/js/jquery-3.6.4.min.js"></script>
+    <script src="/js/comm.js"></script>
+    <!-- Swiper JS -->
+    <script src="/js/swiper.min.js"></script>
+    <base href="~/"/>
+    <link href="css/app.css" rel="stylesheet"/>
+    <link href="Dotnet9.BlazorWeb.styles.css" rel="stylesheet"/>
     <link href="_content/Masa.Blazor/css/masa-blazor.min.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/@("@mdi")/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
     @await RenderSectionAsync("Headers", false)
 </head>
 
-<body>
-    @RenderBody()
+<body class="background">
 
-    <div id="blazor-error-ui">
-        <environment include="Staging,Production">
-            An error has occurred. This application may no longer respond until reloaded.
-        </environment>
-        <environment include="Development">
-            An unhandled exception has occurred. See browser dev tools for details.
-        </environment>
-        <a href="" class="reload">Reload</a>
-        <a class="dismiss">🗙</a>
-    </div>
+@RenderBody()
 
-    <script src="_framework/blazor.server.js"></script>
-    <script src="_content/BlazorComponent/js/blazor-component.js"></script>
+<div id="blazor-error-ui">
+    <environment include="Staging,Production">
+        An error has occurred. This application may no longer respond until reloaded.
+    </environment>
+    <environment include="Development">
+        An unhandled exception has occurred. See browser dev tools for details.
+    </environment>
+    <a href="" class="reload">Reload</a>
+    <a class="dismiss">🗙</a>
+</div>
 
+<script src="_framework/blazor.server.js"></script>
+<script src="_content/BlazorComponent/js/blazor-component.js"></script>
+
+    <environment names="Production">
+        <script>
+            var _hmt = _hmt || [];
+            (function () {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+                crossorigin="anonymous"></script>
+    </environment>
 </body>
 
 </html>
