--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -25,3 +25,8 @@
 @using System.Net
 @using Dotnet9.Contracts.Dto.Albums
 @using Dotnet9.Caller.Services.Albums
+@using Dotnet9.Contracts.Tags
+@using Dotnet9.Caller.Services.Tags
+@using Dotnet9.Contracts.Dto.Timelines
+@using Dotnet9.Caller.Services.Timelines
+@using Dotnet9.Caller.Services.privacies
