--- a/src/Dotnet9.BlazorWeb/Pages/Tools/Index.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/Index.razor
@@ -41,7 +41,7 @@ else
         var siteInfo = await SystemClientService.GetSiteInfoAsync();
         _items = new List<ToolItem>()
         {
-            new("时间戳", $"{siteInfo?.AssetsRemotePath}/tools/timestamp.png", "时间戳转换，页面使用Blazor组件，暂时无法交互", "/tools/timestamp", 0)
+            new("时间戳", $"{siteInfo?.AssetsRemotePath}/tools/timestamp.png", "时间戳转换，页面使用Blazor组件", "/tools/timestamp", 0)
         };
     }
 }
