--- a/src/Dotnet9.BlazorWeb/Pages/Blogs/Details.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Blogs/Details.razor
@@ -3,7 +3,7 @@
 @inject ISystemClientService SystemClientService
 @inject BlogService BlogService
 
-<PageTitle>_title</PageTitle>
+<PageTitle>@_title</PageTitle>
 <h1 class="detail-title">@_title</h1>
 
 <div class="con_info">
