--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -30,3 +30,5 @@
 @using Dotnet9.Contracts.Dto.Timelines
 @using Dotnet9.Caller.Services.Timelines
 @using Dotnet9.Caller.Services.privacies
+@using Markdig
+@using Dotnet9.WebShare.Helpers
