--- a/src/Dotnet9.BlazorWeb/Pages/Tools/Timestamp.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/Timestamp.razor
@@ -2,36 +2,64 @@
 
 <PageTitle>时间戳</PageTitle>
 
-<h2 style="margin-bottom: 10px; margin-top: 10px; text-align: center;">时间戳</h2>
+<h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">时间戳</h2>
 
 <MRow>
-    现在 @DateToTimestamp(DateTime.Now, TimestampKind.Seconds)
+    现在
 </MRow>
 <MRow>
-    <MTextField Label="时间戳" Type="number" TValue="long" @bind-Value="_timestamp1" />
+    北京时间：@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")
+</MRow>
+<MRow>
+    时间戳：@DateToTimestamp(DateTime.Now, TimestampKind.Seconds)
+</MRow>
+
+<div class="gap-solid" style="margin: 30px 0 20px 0"></div>
+
+<MRow>
+    时间转时间戳
+</MRow>
+<MRow>
+    <MTextField Label="时间戳" Type="number" TValue="long" @bind-Value="_timestamp1"/>
     <MSelect @bind-Value="_kindValue1"
              Label="时间戳类型"
              Items="@_items"
              ItemText="u => u.Label"
              ItemValue="u => u.Value"
              Class="mx-3"
+             style="margin: 0 0 0 20px"
              MenuProps="props => props.OffsetY = true">
     </MSelect>
-    <MButton OnClick="@Convert1">转换</MButton>
-    <MTextField Label="北京时间"
-                TValue="string" @bind-Value="_datetime1"
-                Class="ml-3" />
 </MRow>
 <MRow>
-    <MTextField Label="北京时间" TValue="string" @bind-Value="_datetime2" />
+    <MButton OnClick="@Convert1">转换</MButton>
+</MRow>
+<MRow>
+    <MTextField Label="北京时间"
+                TValue="string" @bind-Value="_datetime1"
+                Class="ml-3"/>
+</MRow>
+
+<div class="gap-solid" style="margin: 30px 0 20px 0"></div>
+
+<MRow>
+    时间戳转时间
+</MRow>
+<MRow>
+    <MTextField Label="北京时间" TValue="string" @bind-Value="_datetime2"/>
+</MRow>
+<MRow>
     <MButton Class="mx-3" OnClick="@Convert2">转换</MButton>
-    <MTextField Label="时间戳" TValue="long" @bind-Value="_timestamp2" />
+</MRow>
+<MRow>
+    <MTextField Label="时间戳" TValue="long" @bind-Value="_timestamp2"/>
     <MSelect @bind-Value="_kindValue2"
              Label="时间戳类型"
              Items="_items"
              ItemText="u => u.Label"
              ItemValue="u => u.Value"
              MenuProps="props => props.OffsetY = true"
+             style="margin: 0 0 0 20px"
              Class="ml-3">
     </MSelect>
 </MRow>
@@ -50,8 +78,8 @@
 
     protected override Task OnInitializedAsync()
     {
-        _items.Add(new TimestampItem("时间戳秒", TimestampKind.Seconds));
-        _items.Add(new TimestampItem("时间戳毫秒", TimestampKind.Milliseconds));
+        _items.Add(new TimestampItem("秒", TimestampKind.Seconds));
+        _items.Add(new TimestampItem("毫秒", TimestampKind.Milliseconds));
         _currentDatetime = DateTime.Now;
         _timestamp1 = _timestamp2 = DateToTimestamp(_currentDatetime, TimestampKind.Seconds);
         _datetime1 = _datetime2 = _currentDatetime.ToString("yyyy-MM-dd HH:mm:ss");
@@ -71,7 +99,7 @@
         }
         catch
         {
-            // ignored
+    // ignored
         }
     }
 
