--- a/src/Dotnet9.BlazorWeb/Shared/MarkdownComponent.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/MarkdownComponent.razor
@@ -39,7 +39,10 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await JsRuntime.InvokeVoidAsync("highlightJsInterop.initHighlightJs");
+        if (firstRender)
+        {
+            await JsRuntime.InvokeVoidAsync("highlightJsInterop.initHighlightJs");
+        }
     }
 
 }
