add website version;fix style;

--- a/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
@@ -33,7 +33,8 @@
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/highlight.js/11.7.0/styles/monokai-sublime.min.css"/>
-    <link rel="stylesheet" href="~/css/detail.css"/>
+    <link rel="stylesheet" href="~/css/detail.css" />
+    <link rel="stylesheet" href="/css/blogpost.css" />
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
