--- a/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
@@ -50,7 +50,7 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        if (firstRender)
+        if (!firstRender)
         {
             await JsRuntime.InvokeVoidAsync("window.windowInit");
         }
