--- a/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.RazorPages/Pages/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
     <meta name="description" content="@ViewData[ViewDataKeys.Description]"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/css/base.css" rel="stylesheet">
+    <link href="/css/blogpost.css" rel="stylesheet" />
     <link href="/css/m.css" rel="stylesheet">
     <link href="/css/swiper.min.css" rel="stylesheet">
     <script src="/js/jquery-3.6.4.min.js"></script>
