--- a/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
+++ b/src/Dotnet9.BlazorWeb/Pages/_Layout.cshtml
@@ -10,7 +10,7 @@
 }
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
     <meta charset="utf-8"/>
@@ -33,8 +33,8 @@
     <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.staticfile.org/highlight.js/11.7.0/styles/monokai-sublime.min.css"/>
-    <link rel="stylesheet" href="~/css/detail.css" />
-    <link rel="stylesheet" href="/css/blogpost.css" />
+    <link rel="stylesheet" href="~/css/detail.css"/>
+    <link rel="stylesheet" href="/css/blogpost.css"/>
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
@@ -96,16 +96,23 @@
         };
     </script>
 
-<script src="_framework/blazor.server.js"></script>
+<div id="reconnect-modal" style="display: none;"></div>
+<script src="_framework/blazor.server.js" autostart="false"></script>
+    <script src="~/js/boot.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
 <script>
         Blazor.start({
             configureSignalR: function (builder) {
                 let c = builder.build();
-                c.serverTimeoutInMilliseconds = 60000;
+                c.serverTimeoutInMilliseconds = 60000; 
+                c.keepAliveIntervalInMilliseconds = 15000;
                 builder.build = () => {
                     return c;
                 };
+            },
+            reconnectionHandler: {
+                onConnectionDown: (options, error) => console.error(error),
+                onConnectionUp: () => console.log("Up, up, and away!")
             }
         });
     </script>
