--- a/src/Dotnet9.BlazorWeb/Shared/FooterPartial.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/FooterPartial.razor
@@ -1,6 +1,9 @@
-﻿@inject ISystemClientService SystemClientService
+﻿@using Microsoft.AspNetCore.SignalR.Client
+@inject ISystemClientService SystemClientService
 @inject LinkService LinkService
-
+@using Microsoft.AspNetCore.SignalR.Client
+@inject NavigationManager Navigation
+@implements IAsyncDisposable
 
 <footer>
     <div class="box">
@@ -40,7 +43,7 @@
                 &nbsp; | 后端&nbsp;<a href="https://learn.microsoft.com/zh-cn/aspnet/core/web-api/?view=aspnetcore-8.0" target="_blank">.NET Web API</a>
                 &nbsp; | <a href="/privacy" target="_blank">隐私政策</a>
             </p>
-            <p>网站源码：版本【@_appVersion】，编译时间【@_publishTime】</p>
+            <p>实时在线人数：@_userCount, 网站源码：版本【@_appVersion】，编译时间【@_publishTime】</p>
         </div>
     </div>
 </footer>
@@ -101,6 +104,9 @@
     string? _appVersion;
     string? _publishTime;
 
+    private int _userCount;
+    private HubConnection? _hubConnection;
+
     protected override async Task OnInitializedAsync()
     {
         _siteInfo = await SystemClientService.GetSiteInfoAsync();
@@ -113,6 +119,25 @@
             var assemblyPath = assembly.Location;
             var lastModified = File.GetLastWriteTime(assemblyPath);
             _publishTime = lastModified.ToString("yyyy年MM月dd号 HH:mm:ss fff");
+        }
+
+        _hubConnection = new HubConnectionBuilder().WithUrl(new Uri($"{_siteInfo?.Domain}/onlineUsersHub"))
+            .Build();
+
+        _hubConnection.On<int>("UserCountUpdated", count =>
+        {
+            _userCount = count;
+            InvokeAsync(StateHasChanged);
+        });
+
+        await _hubConnection.StartAsync();
+    }
+
+    public async ValueTask DisposeAsync()
+    {
+        if (_hubConnection is not null)
+        {
+            await _hubConnection.DisposeAsync();
         }
     }
 
