--- a/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
+++ b/src/Dotnet9.BlazorWeb/Shared/MainLayout.razor
@@ -10,6 +10,7 @@
         @Body
     </div>
     <div class="box_r">
+        <SiteCountPartial/>
         <TopKeywordsSidebar/>
         @if (_recommendBlogs?.Any() == true)
         {
