--- a/src/Dotnet9.BlazorWeb/_Imports.razor
+++ b/src/Dotnet9.BlazorWeb/_Imports.razor
@@ -32,4 +32,4 @@
 @using Dotnet9.Caller.Services.privacies
 @using Markdig
 @using Dotnet9.WebShare.Helpers
-@using Dotnet9.BlazorWeb.Hubs
+@using Dotnet9.ASPNETCore
