--- a/src/Dotnet9.BlazorWeb/Pages/Tools/StringEncoder.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/StringEncoder.razor
@@ -2,29 +2,30 @@
 
 <PageTitle>@Title</PageTitle>
 
-<h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@Title</h2>
+<MApp>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@Title</h2>
 
-<MRow>
-    <MTextarea BackgroundColor="grey lighten-2"
-               Color="cyan" Solo TValue="string" @bind-Value="_inputString"
-               Label="输入字符串"/>
-</MRow>
+    <p>
+        <MTextarea BackgroundColor="grey lighten-2"
+                   Color="cyan" Solo TValue="string" @bind-Value="_inputString"
+                   Label="输入字符串"/>
+    </p>
 
-<MRow>
-    <MTextarea BackgroundColor="amber lighten-4" Solo
-               Color="orange orange-darken-4" TValue="string" @bind-Value="_encodedOrDecodeString"
-               Label="编/解码结果">
-    </MTextarea>
-</MRow>
+    <p>
+        <MTextarea BackgroundColor="amber lighten-4" Solo
+                   Color="orange orange-darken-4" TValue="string" @bind-Value="_encodedOrDecodeString"
+                   Label="编/解码结果"/>
+    </p>
 
-<MRow>
-    <MButton OnClick="@Encode">编码</MButton>
-    <MButton OnClick="@Decode">解码</MButton>
-    <MButton OnClick="@Clear">清空</MButton>
-</MRow>
+    <p>
+        <MButton OnClick="@Encode">编码</MButton>
+        <MButton OnClick="@Decode">解码</MButton>
+        <MButton OnClick="@Clear">清空</MButton>
+    </p>
+</MApp>
 
 @code {
-        private const string Title = "在线字符串编码工具";
+    private const string Title = "工具箱-在线字符串编码工具";
     private string? _inputString;
     private string? _encodedOrDecodeString;
 
