--- a/src/Dotnet9.BlazorWeb/Pages/Tools/Timestamp.razor
+++ b/src/Dotnet9.BlazorWeb/Pages/Tools/Timestamp.razor
@@ -2,71 +2,73 @@
 
 <PageTitle>@_title</PageTitle>
 
-<h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
+<MApp>
+    <h2 style="margin-bottom: 30px; margin-top: 10px; text-align: center;">@_title</h2>
 
-<MRow>
-    现在
-</MRow>
-<MRow>
-    北京时间：@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")
-</MRow>
-<MRow>
-    时间戳：@DateToTimestamp(DateTime.Now, TimestampKind.Seconds)
-</MRow>
+    <p>
+        现在
+    </p>
+    <p>
+        北京时间：@DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss")
+    </p>
+    <p>
+        时间戳：@DateToTimestamp(DateTime.Now, TimestampKind.Seconds)
+    </p>
 
-<div class="gap-solid" style="margin: 30px 0 20px 0"></div>
+    <div class="gap-solid" style="margin: 10px 0 20px 0"></div>
 
-<MRow>
-    时间转时间戳
-</MRow>
-<MRow>
-    <MTextField Label="时间戳" Type="number" TValue="long" @bind-Value="_timestamp1"/>
-    <MSelect @bind-Value="_kindValue1"
-             Label="时间戳类型"
-             Items="@_items"
-             ItemText="u => u.Label"
-             ItemValue="u => u.Value"
-             Class="mx-3"
-             style="margin: 0 0 0 20px"
-             MenuProps="props => props.OffsetY = true">
-    </MSelect>
-</MRow>
-<MRow>
-    <MButton OnClick="@Convert1">转换</MButton>
-</MRow>
-<MRow>
-    <MTextField Label="北京时间"
-                TValue="string" @bind-Value="_datetime1"
-                Class="ml-3"/>
-</MRow>
+    <p>
+        时间转时间戳
+    </p>
+    <p>
+        <MTextField Label="时间戳" Type="number" TValue="long" @bind-Value="_timestamp1"/>
+        <MSelect @bind-Value="_kindValue1"
+                 Label="时间戳类型"
+                 Items="@_items"
+                 ItemText="u => u.Label"
+                 ItemValue="u => u.Value"
+                 Class="mx-3"
+                 style="margin: 0 0 0 20px"
+                 MenuProps="props => props.OffsetY = true">
+        </MSelect>
+    </p>
+    <p>
+        <MButton Color="lime" OnClick="@Convert1">转换</MButton>
+    </p>
+    <p>
+        <MTextField Label="北京时间"
+                    TValue="string" @bind-Value="_datetime1"
+                    Class="ml-3"/>
+    </p>
 
-<div class="gap-solid" style="margin: 30px 0 20px 0"></div>
+    <div class="gap-solid" style="margin: 10px 0 20px 0"></div>
 
-<MRow>
-    时间戳转时间
-</MRow>
-<MRow>
-    <MTextField Label="北京时间" TValue="string" @bind-Value="_datetime2"/>
-</MRow>
-<MRow>
-    <MButton Class="mx-3" OnClick="@Convert2">转换</MButton>
-</MRow>
-<MRow>
-    <MTextField Label="时间戳" TValue="long" @bind-Value="_timestamp2"/>
-    <MSelect @bind-Value="_kindValue2"
-             Label="时间戳类型"
-             Items="_items"
-             ItemText="u => u.Label"
-             ItemValue="u => u.Value"
-             MenuProps="props => props.OffsetY = true"
-             style="margin: 0 0 0 20px"
-             Class="ml-3">
-    </MSelect>
-</MRow>
+    <p>
+        时间戳转时间
+    </p>
+    <p>
+        <MTextField Label="北京时间" TValue="string" @bind-Value="_datetime2"/>
+    </p>
+    <p>
+        <MButton Color="lime" Class="mx-3" OnClick="@Convert2">转换</MButton>
+    </p>
+    <p>
+        <MTextField Label="时间戳" TValue="long" @bind-Value="_timestamp2"/>
+        <MSelect @bind-Value="_kindValue2"
+                 Label="时间戳类型"
+                 Items="_items"
+                 ItemText="u => u.Label"
+                 ItemValue="u => u.Value"
+                 MenuProps="props => props.OffsetY = true"
+                 style="margin: 0 0 0 20px"
+                 Class="ml-3">
+        </MSelect>
+    </p>
+</MApp>
 
 @code
 {
-    string? _title;
+        private const string? _title = "工具箱-时间戳";
     DateTime _currentDatetime;
     long _timestamp1;
     long _timestamp2;
@@ -79,7 +81,6 @@
 
     protected override Task OnInitializedAsync()
     {
-        _title = "时间戳";
         _items.Add(new TimestampItem("秒", TimestampKind.Seconds));
         _items.Add(new TimestampItem("毫秒", TimestampKind.Milliseconds));
         _currentDatetime = DateTime.Now;
